WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296728
Safer-cpp check may fail due to missing include statement in `GraphicsLayerCA.cpp`
https://bugs.webkit.org/show_bug.cgi?id=296728
Summary
Safer-cpp check may fail due to missing include statement in `GraphicsLayerCA...
Lily Spiniolas
Reported
2025-07-30 20:57:28 PDT
rdar://157175851
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-07-30 21:04:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48758
EWS
Comment 2
2025-07-30 22:01:03 PDT
Committed
298067@main
(2caadb4825e5): <
https://commits.webkit.org/298067@main
> Reviewed commits have been landed. Closing PR #48758 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug