Safer-cpp check may fail due to missing include statement in `GraphicsLayerCA.cpp` https://bugs.webkit.org/show_bug.cgi?id=296728 rdar://157175851

Reviewed by Abrar Rahman Protyasha, Megan Gardner, and Aditya Keerthi.

Depending on the order of Unified Sources, the safer-cpp check may fail
due to `GraphicsLayerCA::setContentsToVideoElement` calling
`setContentsToPlatformLayer(...)` with a parameter which has
forward-declared type `PlatformLayer.`

Resolved by including "PlatformLayer.h".

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:

Canonical link: https://commits.webkit.org/298067@main